Fixe overflow of prettyprint

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -201,6 +201,7 @@ body {
     margin-top: 18px;
     padding: 5px;
     line-height: 22px;
+    overflow-x: auto;
 }
 
 .inline-code.bold {
